# xmpp-rs

./: .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml
.forgejo/workflows/: build.yaml  check-changelog.py
jid/: CHANGELOG.md  Cargo.toml
jid/src/: error.rs  lib.rs  parts.rs
minidom/: CHANGELOG.md  Cargo.toml
minidom/src/: convert.rs  element.rs  error.rs  lib.rs  node.rs  prefixes.rs  tests.rs
parsers/: Cargo.toml  ChangeLog  doap.xml
parsers/examples/: generate-caps.rs
parsers/src/: attention.rs  avatar.rs  bind.rs  bind2.rs  blocking.rs  bob.rs  bookmarks.rs  bookmarks2.rs  caps.rs  carbons.rs  cert_management.rs  chatstates.rs  component.rs  csi.rs  data_forms.rs  data_forms_validate.rs  date.rs  delay.rs  disco.rs  ecaps2.rs  eme.rs  extdisco.rs  fast.rs  forwarding.rs  hashes.rs  http_upload.rs  ibb.rs  ibr.rs  idle.rs  iq.rs  jid_prep.rs  jingle.rs  jingle_dtls_srtp.rs  jingle_ft.rs  jingle_grouping.rs  jingle_ibb.rs  jingle_ice_udp.rs  jingle_message.rs  jingle_raw_udp.rs  jingle_rtcp_fb.rs  (+49 more)
parsers/src/data_forms/: data_form.rs  mod.rs  validate.rs
parsers/src/muc/: muc.rs  user.rs
parsers/src/pubsub/: event.rs  mod.rs  owner.rs  pubsub.rs
parsers/src/util/: error.rs  macro_tests.rs  macros.rs  mod.rs  text_node_codecs.rs
sasl/: CHANGELOG.md  Cargo.toml  README.md
sasl/src/: error.rs  lib.rs  secret.rs
sasl/src/client/: mod.rs
sasl/src/client/mechanisms/: anonymous.rs  plain.rs  scram.rs
sasl/src/common/: mod.rs  scram.rs
sasl/src/server/: mod.rs
sasl/src/server/mechanisms/: anonymous.rs  plain.rs  scram.rs
tokio-xmpp/: Cargo.toml  ChangeLog
tokio-xmpp/examples/: contact_addr.rs  download_avatars.rs  echo_bot.rs  echo_component.rs  echo_server.rs  keep_connection.rs
tokio-xmpp/src/: connect.rs  error.rs  event.rs  lib.rs  stream_features.rs  stream_start.rs  xmpp_codec.rs  xmpp_stream.rs
tokio-xmpp/src/client/: async_client.rs  auth.rs  bind.rs  connect.rs  iq.rs  login.rs  mod.rs  simple_client.rs  stream.rs
tokio-xmpp/src/component/: auth.rs  connect.rs  login.rs  mod.rs  stream.rs
tokio-xmpp/src/connect/: dns.rs  mod.rs  starttls.rs  tcp.rs  websocket.rs
tokio-xmpp/src/proto/: mod.rs  xmpp_codec.rs  xmpp_stream.rs
tokio-xmpp/src/stanzastream/: connected.rs  error.rs  mod.rs  negotiation.rs  queue.rs  stream_management.rs  worker.rs
tokio-xmpp/src/starttls/: client.rs  error.rs  happy_eyeballs.rs  mod.rs
tokio-xmpp/src/tcp/: mod.rs
tokio-xmpp/src/xmlstream/: capture.rs  common.rs  initiator.rs  mod.rs  responder.rs  tests.rs  xmpp.rs
xmpp/: Cargo.toml  ChangeLog
xmpp/examples/: hello_bot.rs
xmpp/src/: agent.rs  builder.rs  delay.rs  event.rs  event_loop.rs  lib.rs
xmpp/src/disco/: mod.rs
xmpp/src/iq/: get.rs  result.rs  set.rs
xmpp/src/message/: send.rs
xmpp/src/message/receive/: chat.rs  group_chat.rs  mod.rs
xmpp/src/muc/: private_message.rs  room.rs
xmpp/src/presence/: receive.rs
xmpp/src/pubsub/: avatar.rs  mod.rs
xmpp/src/upload/: receive.rs  send.rs
xso/: Cargo.toml  ChangeLog  README.md
xso-proc/: Cargo.toml  ChangeLog  README.md
xso-proc/src/: common.rs  compound.rs  enums.rs  error_message.rs  field.rs  lib.rs  meta.rs  scope.rs  state.rs  structs.rs  types.rs
xso-proc/src/field/: attribute.rs  child.rs  element.rs  flag.rs  mod.rs  text.rs
xso/src/: asxml.rs  error.rs  from_xml_doc.md  fromxml.rs  lib.rs  minidom_compat.rs  rxml_util.rs  text.rs
