[package]
name = "xso_proc"
version = "0.1.0"
authors = [
  "Jonas Schäfer <jonas@zombofant.net>",
]
description = "Macro implementation of #[derive(FromXml, AsXml)]"
homepage = "https://xmpp.rs"
repository = "https://gitlab.com/xmpp-rs/xmpp-rs"
keywords = ["xso", "derive", "serialization"]
license = "MPL-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "^1"
syn = { version = "^2", features = ["full", "extra-traits"] }
proc-macro2 = "^1"
rxml_validation = { version = "0.11", default-features = false, features = ["std"] }

[features]
panicking-into-impl = ["minidom"]
minidom = []
